[package]
name = "depth_analyzer"
version = "0.1.1"
edition = "2021"
description = "Program that analyzes an image processed by MiDaS AI."
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.8"

[[bin]]
name = "depth_analyzer"
