[package]
name = "depth_analyzer"
version = "0.1.6"
edition = "2021"
description = "Program that analyzes an image processed by AI depth detection models."
license = "GPL-3.0"
documentation = "https://docs.rs/depth_analyzer/"
homepage = "https://github.com/rumenmitov/depth_analyzer"
repository = "https://github.com/rumenmitov/depth_analyzer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.8"

[[bin]]
name = "depth_analyzer"
